[package]
name = "counter_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "1.18.2"

[dev-dependencies]
solana-program-test = "1.18.2"
solana-sdk = "1.18.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }


